get roole by id with additional fields
