# api/api.go
@@ -71,7 +71,7 @@ func SetUpRouter(h handlers.Handler, cfg config.Config) (r *gin.Engine) {
 	r.DELETE("/user-info-field/:user-info-field-id", h.RemoveUserInfoField)
 
 	// PERMISSION SERVICE
-	// r.GET("/role/:role-id", h.GetRoleByID)
+	r.GET("/role/:role-id", h.GetRoleByID)
 	r.POST("/role", h.AddRole)
 	r.PUT("/role", h.UpdateRole)
 	r.DELETE("/role/:role-id", h.RemoveRole)
